--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.2",
     "@whiskeysockets/baileys": "https://github.com/bipproduction/Baileys.git",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
+    "yarn": "^1.22.19"
   }
 }
