--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "qrcode-terminal": "^0.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
