--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/qrcode-terminal": "^0.12.0",
     "@types/uuid": "^9.0.2",
     "@whiskeysockets/baileys": "https://github.com/bipproduction/Baileys.git",
     "colors": "^1.4.0",
@@ -14,6 +15,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "yarn": "^1.22.19"
