--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.199",
     "@types/qrcode-terminal": "^0.12.0",
     "@types/uuid": "^9.0.2",
     "@whiskeysockets/baileys": "https://github.com/bipproduction/Baileys.git",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "lodash": "^4.17.21",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "yaml": "^2.3.2",
     "yarn": "^1.22.19"
   }
 }
