--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-fetch": "^4.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.1",
